syntax = "proto3";

option csharp_namespace = "GrpcDiscountApplier";

package discountUse;

service DiscountApplier {
  rpc Apply (UseCodeRequest) returns (UseCodeReply);
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeReply {
  string result = 1;
}