syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "DiscountClient";

package discountGen;

service DiscountGenerator {
  rpc Generate (DiscountGeneratorRequest) returns (DiscountGeneratorReply);
  rpc GetLast (google.protobuf.Empty) returns (DiscountGeneratorGetLastReply);
}

message DiscountGeneratorRequest {
  int32 count = 1;
  int32 length = 7;
}

message DiscountGeneratorReply {
  bool result = 1;
}

message DiscountGeneratorGetLastReply {
	string code = 1;
}
